# web_server

./: .doxygen  .gitignore  CMakeLists.txt  standard.md
demos/: CMakeLists.txt  main.cpp
include/uri/: uri.hpp
include/web/: http.hpp  main.hpp  text.hpp  uri.hpp
src/: character_set.cpp  http.cpp  http_request.cpp  http_response.cpp  main.cpp  uri.cpp
tests/: CMakeLists.txt  catch_main.hpp  http_request_test.cpp  http_response_test.cpp  http_test.cpp  uri_test.cpp
